# docling-grpc-examples

./: .gitignore  README.md
bootstrap/: README.md  run.sh
examples/go/: README.md  generate.sh  go.mod  go.sum  main.go  run.sh
examples/java-quarkus/: README.md  pom.xml  sync-proto.sh
examples/java-quarkus/src/main/java/org/example/docling/quarkus/: Main.java
examples/java-vanilla/: README.md  build.gradle  run.sh  settings.gradle
examples/java-vanilla/src/main/java/org/example/docling/vanilla/: Main.java
examples/node/: README.md  generate.sh  package-lock.json  package.json  run.sh
examples/node/src/: index.ts
examples/python/: README.md  generate.sh  pyproject.toml  run.sh
examples/python/src/docling_example/: main.py
examples/rust/: Cargo.toml  build.rs  run.sh
examples/rust/src/: main.rs
fixtures/: README.md
fixtures/expected/: clean.json  scanned.json
