[package]
name = "docling-grpc-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "docling-rust-example"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
codegen-units = 1
lto = "thin"
